[package]
name = "itembox"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "itembox"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = {version = "0.30.1", features = ["init-if-needed"]}
anchor-spl = "0.30.1"
mpl-core = { version = "0.8.0", features = ["anchor"] }
mpl-token-metadata = { version = "4.1.2" }
solana-program = "1.18"
# spl-associated-token-account = { version = "3", features = ["no-entrypoint"], optional = true }
# spl-memo = { version = "4", features = ["no-entrypoint"], optional = true }
# spl-token = { version = "4", features = ["no-entrypoint"], optional = true }
# spl-token-2022 = { version = "3", features = ["no-entrypoint"], optional = true }
# spl-token-group-interface = { version = "0.2.3", optional = true }
# spl-token-metadata-interface = { version = "0.3.3", optional = true }
# spl-pod = { version = "0.2.2", optional = true }